<?xml version="1.0"?>
<package format="2">
  <name>ros_image_feature_utils</name>
  <version>0.0.0</version>
  <description>
    The ros_image_feature_utils package

    A simple example of OpenCV features detection / extraction / plot.

  </description>

  <maintainer email="jeremiederay@todo.todo">jeremiederay</maintainer>

  <license>BSD modified</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pal_image_utils</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>pal_image_utils</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
